fixed code readability

--- a/css/style.css
+++ b/css/style.css
@@ -382,10 +382,6 @@ hr {
     background-color: #F94A29;
 }
 
-.photos {
-    width: 100%;
-    height: 100%;
-}
 
 .photos-header {
     display: flex;
@@ -426,11 +422,6 @@ hr {
     opacity: 0.7;
     cursor: pointer;
   }
-
-
-.hero {
-    width: 100%;
-}
 
 #yellow {
     color: #fdc451;
@@ -542,7 +533,7 @@ hr {
     background-color: #242526;
     display: flex;
     padding: 10px;
-
+    width: 100%;
 }
 
 .posted {
@@ -585,15 +576,58 @@ hr {
     width: 100%;
 }
 
+/* POST ON NEWS FEED */
+
 .photos {
     display: flex;
     gap: 5px;
+    width: 100%;
+    height: 100%;
 }
 
 .wanda {
-    width: 200px;
-    
+    width: 33.33%;
 }
+
+.kim {
+    width: 50%;
+}
+
+.blue {
+    color: #53bae2; 
+}
+
+.user, .username {
+    font-weight: 400;
+}
+
+.user:hover {
+    text-decoration: underline;
+}
+
+.hero {
+    width: 100%;
+    height: 500px;
+} 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .reactions {
     display: flex;
@@ -779,21 +813,4 @@ hr {
     background-color: #707274;
 }
 
-/* Kim Soo Hyun */
-
-.kim {
-    flex: 50%;
-}
-
-.blue {
-    color: #53bae2; 
-}
-
-.user, .username {
-    font-weight: 400;
-}
-
-.user:hover {
-    text-decoration: underline;
-}
 
